--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "proxy": "http://localhost:3000/",
   "scripts": {
-    "dev": "vite --port 3000",
+    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server.js",
+    "serverdev": "nodemon server.js"
   },
   "devDependencies": {
+    "nodemon": "^3.1.7",
     "vite": "^5.4.10"
   },
   "dependencies": {
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
+    "json-server": "^1.0.0-beta.3"
   }
 }
